--- a/sass/style.scss
+++ b/sass/style.scss
@@ -238,13 +238,14 @@ padding: 16px;
   gap: 25px;
 }
 &__menu {
-  font-weight: 400;
+  font-weight: 300;
   font-size: 20px;
-  padding: 20px 0;
-  background: $green;
+  padding: 10px 0 10px 0;
+  border-bottom: 3px solid $green;
   width: 50px;
-  
+  margin: 40px 0 25px 0;
 }
+
 &__carte {
   box-shadow: 0px 0px 2px $grey;
   padding: 20px 20px 20px 30px;
@@ -269,6 +270,7 @@ padding: 16px;
   justify-content: space-between;
   font-weight: 400;
   font-size: 16px;
+  padding-top: 10px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
@@ -332,9 +334,7 @@ padding: 16px;
   .page__menu ul li{
     width: auto;
   }
-  .page__menu__menu {
-    padding-left: 2%;
-  }
+  
 }
 /*--responsive version mobile--*/
 @media (max-width: 767px) {
@@ -357,9 +357,7 @@ padding: 16px;
     display: flex;
     flex-direction: column;
   }
-  .page__menu__menu {
-    padding-left: 0.5%;
-  }
+  
   .page__grise__coeur1 {
     font-size: 28px;
   }
