--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,6 +9,35 @@
   font-family: "Shrikhand";
   position: relative;
 }
+/*******loader**********/
+.loader{
+  animation: loader .01s;
+  animation-fill-mode: both;
+  position: fixed;
+  justify-content: center;
+&__conteneur{ 
+  display: flex;
+  width: 5rem;
+  justify-content: space-between;
+  &__1 &__2 &__3{
+    height: 1rem;
+    width: 1rem;
+    border-radius: 1rem;
+    animation: jump 1s;
+    animation-iteration-count: 1;
+  }
+  &__1{
+    background: $purple;
+  }
+  &__2{
+    background: $pink;
+    animation-delay: .25s;
+  }
+  &__3{
+    background: $green;
+    animation-delay: .5s;
+  }
+}}
 /********Search*******/
 .localisation {
   &__ville{ 
@@ -44,6 +73,11 @@
     border: none;
     margin: 30px 0;
     width: 270px;
+    transform: scale(1);
+    transition: transform (400ms);
+    &:hover{
+      transform: scale(1.1);
+    }
   }
 }}
 /****Fonctionnemnt***/
@@ -165,7 +199,7 @@ padding: 16px;
 &-partenaire {
   padding: 10px;
 }
-& span {
+& a {
   color: $white;
 }
 &-log img {
@@ -210,20 +244,16 @@ padding: 16px;
   font-size: 30px;
   position: absolute;
   right: 6%;
+  color: $black;
 }
-&__coeur2 {
+&__coeur2  {
   position: absolute;
   font-size: 30px;
   right: 6%;
   color: $pink;
   visibility: hidden;
 }
-&__coeur2::before {
-  content: "";
-  transition: color 1s ease-out;
-  
-}
-&__coeur2 a:hover{
+&__coeur2:hover &__coeur1{
   color: $pink;
   visibility: visible;
 }
@@ -245,10 +275,9 @@ padding: 16px;
   width: 50px;
   margin: 40px 0 25px 0;
 }
-
 &__carte {
   box-shadow: 0px 0px 2px $grey;
-  padding: 20px 20px 20px 30px;
+  padding: 10px 20px 10px 30px;
   font-size: 17px;
   font-weight: bold;
   border-radius: 15px;
@@ -264,7 +293,6 @@ padding: 16px;
   white-space: nowrap;
   overflow: hidden;
 }
-
 &__stitre {
   display: flex;
   justify-content: space-between;
@@ -282,8 +310,42 @@ padding: 16px;
 }
 &__mony {
   font-weight: bold;
+  transition: 500ms; 
 }
+&__carte:hover .fa-check{ 
+  margin-right: 4rem; 
+  
 }
+&__carte:hover &__confirmation{
+  margin-left: 5rem;
+  transition: 500ms; 
+}
+&__confirmation .fa-check {
+  position: absolute;
+ background-color: $green;
+ display: flex;
+ right: 0;
+ top: 0;
+height: 100%;
+ width: 4rem;
+ transform: translateX(100%);
+ transition: 500ms;
+}
+&__mony &__confirmation{
+  transition: 500ms;
+}
+
+}
+.fa-check {
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ font-size: 20px;
+ color: $white;
+ 
+}
+
+
 .bouton {
   margin: 40px 0 50px 0;
   display: flex;
@@ -327,14 +389,15 @@ padding: 16px;
   .restaurants__photo li {
     width: 100%;
   }
-  .page__menu ul {
+  .page__menu{ 
+  & ul {
     display: flex;
     flex-direction: column;
   }
-  .page__menu ul li{
+  & ul li{
     width: auto;
   }
-  
+  }
 }
 /*--responsive version mobile--*/
 @media (max-width: 767px) {
@@ -357,7 +420,6 @@ padding: 16px;
     display: flex;
     flex-direction: column;
   }
-  
   .page__grise__coeur1 {
     font-size: 28px;
   }
