--- a/css/style.css
+++ b/css/style.css
@@ -60,35 +60,34 @@ footer {
 
 /*******loader**********/
 .loader {
-  animation: loader 0.01s;
-  animation-fill-mode: both;
   position: fixed;
-  justify-content: center;
+  background-color: hwb(0 100% 0%);
+  z-index: -1;
+  inset: 0;
+  opacity: 0.9;
 }
-.loader__conteneur {
-  display: flex;
-  width: 5rem;
-  justify-content: space-between;
-}
-.loader__conteneur__1 .loader__conteneur__2 .loader__conteneur__3 {
-  height: 1rem;
-  width: 1rem;
-  border-radius: 1rem;
-  animation: jump 1s;
-  animation-iteration-count: 1;
-}
-.loader__conteneur__1 {
-  background: #9356dc;
-}
-.loader__conteneur__2 {
-  background: #ff79da;
-  animation-delay: 0.25s;
-}
-.loader__conteneur__3 {
-  background: #99E2D0;
-  animation-delay: 0.5s;
+.loader__spiner {
+  position: fixed;
+  width: 150px;
+  height: 150px;
+  border: 5px solid #99E2D0;
+  border-top: 5px solid #ff79da;
+  border-bottom: 5px solid #9356dc;
+  border-radius: 50%;
+  margin: auto;
+  inset: 0;
+  animation: spin 1s linear infinite;
+  animation-fill-mode: forwards;
 }
 
+@keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
 /********Search*******/
 .localisation__ville {
   display: flex;
@@ -128,7 +127,9 @@ footer {
   transition: transform 400ms;
 }
 .localisation__restaurant__btn:hover {
-  transform: scale(1.1);
+  opacity: 0.9;
+  box-shadow: 0.25rem 0.25rem 10px rgb(0, 0, 0);
+  transition-duration: 0.25s;
 }
 
 /****Fonctionnemnt***/
@@ -140,7 +141,7 @@ footer {
   margin: 40px 0 30px -14px;
 }
 .fonctionnement__btn {
-  box-shadow: 0px 0px 2px #888;
+  box-shadow: 0.05rem 0.05rem 2px #888;
   padding: 20px 20px 20px 30px;
   font-size: 17px;
   font-weight: bold;
@@ -241,17 +242,15 @@ ul .separation {
   font-size: 30px;
   position: absolute;
   right: 5%;
+  background: linear-gradient(360deg, #9356dc, #ff79da);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
   opacity: 0;
-  background: linear-gradient(#ff79da, #9356dc);
-  color: linear-gradient(#ff79da, #9356dc);
 }
 .cover__content__coeur0:hover {
   opacity: 1;
-  color: linear-gradient(#ff79da, #9356dc);
-  background: linear-gradient(#ff79da, #9356dc);
-  background-clip: text;
-  -webkit-background-clip: text;
-  transition: 500ms;
+  transition: 200ms;
 }
 .cover__content__stitre {
   font-weight: bold;
@@ -322,17 +321,15 @@ ul .separation {
   position: absolute;
   font-size: 30px;
   right: 6%;
-  background: linear-gradient(#ff79da, #9356dc);
-  color: linear-gradient(#ff79da, #9356dc);
+  background: linear-gradient(360deg, #9356dc, #ff79da);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
   opacity: 0;
 }
 .page__grise__coeur2:hover {
   opacity: 1;
-  background: linear-gradient(45deg, #ff79da, #9356dc);
-  color: linear-gradient(45deg, #ff79da, #9356dc);
-  background-clip: text;
-  -webkit-background-clip: text;
-  transition: 500ms;
+  transition: 200ms;
 }
 
 .page__menu {
@@ -364,11 +361,33 @@ ul .separation {
   cursor: pointer;
   position: relative;
   overflow: hidden;
+  animation: plat 2s;
+  animation-fill-mode: both;
+}
+.page__menu__carte:nth-child(1) {
+  animation-delay: 500ms;
+}
+.page__menu__carte:nth-child(2) {
+  animation-delay: 1000ms;
+}
+.page__menu__carte:nth-child(3) {
+  animation-delay: 1500ms;
+}
+.page__menu__carte:nth-child(4) {
+  animation-delay: 2000ms;
 }
 .page__menu__titre {
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+}
+@keyframes plat {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 .page__menu__stitre {
   display: flex;
@@ -389,14 +408,18 @@ ul .separation {
   font-weight: bold;
   transition: 500ms;
 }
-.page__menu__carte:hover .fa-check {
+.page__menu__carte:hover .cercle {
   margin-right: 4rem;
 }
 .page__menu__carte:hover .page__menu__confirmation {
   margin-left: 5rem;
   transition: 500ms;
 }
-.page__menu__confirmation .fa-check {
+.page__menu__carte:hover .fa-check {
+  transform: rotate(0deg);
+  transition: 500ms;
+}
+.page__menu__confirmation .cercle {
   position: absolute;
   background-color: #99E2D0;
   display: flex;
@@ -416,7 +439,20 @@ ul .separation {
   align-items: center;
   justify-content: center;
   font-size: 20px;
-  color: hwb(0 100% 0%);
+  color: #99E2D0;
+  transform: rotate(75deg);
+  transition: 200ms;
+}
+
+.cercle .fa-check {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  width: 70%;
+  height: 35%;
+  margin: 20px;
+  background-color: hwb(0 100% 0%);
 }
 
 .bouton {
@@ -434,6 +470,11 @@ ul .separation {
   cursor: pointer;
   border: none;
   margin-top: 30px;
+}
+.bouton__commander:hover {
+  opacity: 0.9;
+  box-shadow: 0.25rem 0.25rem 10px rgb(0, 0, 0);
+  transition-duration: 0.25s;
 }
 
 /*--responsive version tablette--*/
