--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,34 +10,38 @@
   position: relative;
 }
 /*******loader**********/
-.loader{
-  animation: loader .01s;
-  animation-fill-mode: both;
+  .loader{ 
   position: fixed;
-  justify-content: center;
-&__conteneur{ 
-  display: flex;
-  width: 5rem;
-  justify-content: space-between;
-  &__1 &__2 &__3{
-    height: 1rem;
-    width: 1rem;
-    border-radius: 1rem;
-    animation: jump 1s;
-    animation-iteration-count: 1;
-  }
-  &__1{
-    background: $purple;
-  }
-  &__2{
-    background: $pink;
-    animation-delay: .25s;
-  }
-  &__3{
-    background: $green;
-    animation-delay: .5s;
-  }
+  background-color: $white;
+  z-index: -1;
+  inset: 0;
+  opacity: .9;
+  
+  
+  &__spiner{
+  position: fixed;
+  width: 150px;
+  height: 150px;
+  border: 5px solid $green;
+  border-top: 5px solid $pink;
+  border-bottom: 5px solid $purple;
+  border-radius: 50%;
+  margin: auto;
+  inset: 0;
+  animation: spin 1s linear infinite;
+  animation-fill-mode: forwards;
+  
 }}
+@keyframes spin{
+  0%{
+    -webkit-transform: rotate(0deg);
+   
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    
+  }  
+}
 /********Search*******/
 .localisation {
   &__ville{ 
@@ -76,7 +80,9 @@
     transform: scale(1);
     transition: transform (400ms);
     &:hover{
-      transform: scale(1.1);
+      opacity: 0.9;
+      box-shadow: 0.25rem 0.25rem 10px $black;
+      transition-duration: .25s;
     }
   }
 }}
@@ -90,7 +96,7 @@
   margin: 40px 0 30px -14px;
 }
  &__btn {
-  box-shadow: 0px 0px 2px $grey;
+  box-shadow: 0.05rem 0.05rem 2px $grey;
   padding: 20px 20px 20px 30px;
   font-size: 17px;
   font-weight: bold;
@@ -183,21 +189,20 @@ ul .separation {
     position: absolute;
     right: 5%;
   }
-  &__coeur0{
+  &__coeur0 {
     font-size: 30px;
     position: absolute;
     right: 5%;
+    
+    background: linear-gradient(360deg, $purple, $pink);
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
     opacity: 0;
-    background: linear-gradient($pink,$purple);
-    color: linear-gradient($pink,$purple);
   }
   &__coeur0:hover{
     opacity: 1;
-    color: linear-gradient($pink,$purple);
-    background: linear-gradient($pink,$purple);
-    background-clip: text;
-    -webkit-background-clip: text;
-    transition: 500ms;
+    transition: 200ms;
   }
   &__stitre {
     font-weight: bold;
@@ -267,17 +272,15 @@ ul .separation {
   position: absolute;
   font-size: 30px;
   right: 6%;
-  background: linear-gradient($pink,$purple);
-  color: linear-gradient($pink,$purple);
-  opacity: 0; 
+  background: linear-gradient(360deg, $purple, $pink);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  opacity: 0;
 }
 &__coeur2:hover{
   opacity: 1;
-  background: linear-gradient(45deg, $pink, $purple);
-  color: linear-gradient(45deg, $pink,$purple);
-  background-clip: text;
-  -webkit-background-clip: text;
-  transition: 500ms;
+  transition: 200ms;
 }
 }
 .page__menu {
@@ -287,7 +290,7 @@ ul .separation {
 & ul {
   display: flex;
   gap: 25px;
-}
+}  
 &__menu {
   font-weight: 300;
   font-size: 20px;
@@ -308,11 +311,27 @@ ul .separation {
   cursor: pointer;
   position: relative;
   overflow: hidden;
+  @for $i from 1 through 4 {
+    &:nth-child(#{$i}){
+      animation-delay: 500ms*$i;
+    }
+  }
+  animation: plat 2s;
+  animation-fill-mode: both;
 }
 &__titre {
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  
+}
+@keyframes plat {
+  0%{
+    transform: scale(0);
+  }
+  100%{
+    transform: scale(1);
+  }
 }
 &__stitre {
   display: flex;
@@ -333,15 +352,20 @@ ul .separation {
   font-weight: bold;
   transition: 500ms; 
 }
-&__carte:hover .fa-check{ 
-  margin-right: 4rem; 
+&__carte:hover .cercle{ 
+  margin-right: 4rem;
   
 }
 &__carte:hover &__confirmation{
-  margin-left: 5rem;
+  margin-left: 5rem; 
   transition: 500ms; 
 }
-&__confirmation .fa-check {
+&__carte:hover .fa-check{
+  transform: rotate(0deg);
+  transition: 500ms;
+}
+
+&__confirmation .cercle {
   position: absolute;
  background-color: $green;
  display: flex;
@@ -355,23 +379,31 @@ height: 100%;
 &__mony &__confirmation{
   transition: 500ms;
 }
-
 }
 .fa-check {
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 20px;
- color: $white;
+ color: $green;
+ transform: rotate(75deg);
+ transition:  200ms;
+}
+.cercle .fa-check{
+  display: flex;
+ align-items: center;
+ justify-content: center;
+  border-radius: 50%;
+  width: 70%;
+  height: 35%;
+  margin: 20px;
+ background-color: $white;
  
 }
-
-
 .bouton {
   margin: 40px 0 50px 0;
   display: flex;
   justify-content: center;
-
 &__commander {
   padding: 12px 20px;
   border-radius: 50px;
@@ -382,6 +414,11 @@ height: 100%;
   cursor: pointer;
   border: none;
   margin-top: 30px;
+  &:hover{
+    opacity: 0.9;
+    box-shadow: 0.25rem 0.25rem 10px $black;
+    transition-duration: .25s;
+  }
 }
 }
 /*--responsive version tablette--*/
@@ -422,6 +459,7 @@ height: 100%;
 }
 /*--responsive version mobile--*/
 @media (max-width: 767px) {
+ 
   .fonctionnement{ 
     & ul {
       display: flex;
