--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,15 +10,16 @@
   position: relative;
 }
 /*******loader**********/
-  .loader{ 
+ .loader{ 
   position: fixed;
-  background-color: $white;
-  z-index: -1;
   inset: 0;
-  opacity: .9;
+  background: $light-grey; 
+  z-index: 2;
+  animation-delay: 3s;
+  animation: loader 3s  linear;
+  animation-fill-mode:forwards;
   
-  
-  &__spiner{
+  &__spiner{    
   position: fixed;
   width: 150px;
   height: 150px;
@@ -28,20 +29,32 @@
   border-radius: 50%;
   margin: auto;
   inset: 0;
-  animation: spin 1s linear infinite;
-  animation-fill-mode: forwards;
+  animation-delay: 3s;
+  animation: spin 3s  linear;
+  animation-fill-mode:forwards;
   
 }}
 @keyframes spin{
   0%{
-    -webkit-transform: rotate(0deg);
-   
+    transform: rotate(0deg);
+    visibility: visible;
   }
-  100% {
-    -webkit-transform: rotate(360deg);
-    
-  }  
+100%{
+  transform: rotate(360deg);
+  visibility: hidden;
 }
+} 
+@keyframes loader{
+  0%{
+    
+    visibility: visible;
+  }
+100%{
+  
+  visibility: hidden;
+}
+} 
+
 /********Search*******/
 .localisation {
   &__ville{ 
@@ -91,6 +104,7 @@
  & ul {
   display: flex;
   gap: 25px;
+ 
 }
  & h2 {
   margin: 40px 0 30px -14px;
@@ -106,6 +120,8 @@
   position: relative;
   font-family: "roboto";
   cursor: pointer;
+  text-overflow: ellipsis;
+  white-space: nowrap;
   &__icon {
     padding-right: 20px;
   }
@@ -461,9 +477,10 @@ height: 100%;
 @media (max-width: 767px) {
  
   .fonctionnement{ 
+    
     & ul {
       display: flex;
-      flex-direction: column;
+      flex-direction: column; 
     }
     &__btn {
       width: auto;
