Rangement des dossiers modèle 7-1

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,504 +1,12 @@
 /*-----Import--------*/
-@import "reset.scss";
-@import "variable.scss";
+@import "base/reset.scss";
+@import "utils/variables.scss";
+@import "layouts/header.scss";
+@import "layouts/footer.scss";
+@import"pages/menu.scss";
+@import"pages/main.scss";
 /******header*****/
-.logo {
-  display: flex;
-  justify-content: center;
-  padding: 20px;
-  font-family: "Shrikhand";
-  position: relative;
-}
-/*******loader**********/
- .loader{ 
-  position: fixed;
-  inset: 0;
-  background: $light-grey; 
-  z-index: 2;
-  animation-delay: 3s;
-  animation: loader 3s  linear;
-  animation-fill-mode:forwards;
-  
-  &__spiner{    
-  position: fixed;
-  width: 150px;
-  height: 150px;
-  border: 5px solid $green;
-  border-top: 5px solid $pink;
-  border-bottom: 5px solid $purple;
-  border-radius: 50%;
-  margin: auto;
-  inset: 0;
-  animation-delay: 3s;
-  animation: spin 3s  linear;
-  animation-fill-mode:forwards;
-  
-}}
-@keyframes spin{
-  0%{
-    transform: rotate(0deg);
-    visibility: visible;
-  }
-100%{
-  transform: rotate(360deg);
-  visibility: hidden;
-}
-} 
-@keyframes loader{
-  0%{
-    
-    visibility: visible;
-  }
-100%{
-  
-  visibility: hidden;
-}
-} 
 
-/********Search*******/
-.localisation {
-  &__ville{ 
-  display: flex;
-  justify-content: center;
-  box-shadow: 0px 0px 5px $grey;
-  background: $medium-grey;
-  padding: 20px 20px 20px 0px;
-  gap: 15px;
-  font-size: 20px;
-}
-  &__restaurant {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  box-shadow: 0px 0px 2px $grey;
-  background: $light-grey;
-  &__title {
-    font-size: 25px;
-  }
-  &__subtitel {
-    font-size: 18px;
-    font-weight: 300;
-  }
-  &__btn {
-    padding: 15px;
-    border-radius: 50px;
-    background: linear-gradient(to bottom,$pink ,$purple);
-    color: $white;
-    font-size: 17px;
-    font-weight: bold;
-    cursor: pointer;
-    border: none;
-    margin: 30px 0;
-    width: 270px;
-    transform: scale(1);
-    transition: transform (400ms);
-    &:hover{
-      opacity: 0.9;
-      box-shadow: 0.25rem 0.25rem 10px $black;
-      transition-duration: .25s;
-    }
-  }
-}}
-/****Fonctionnemnt***/
-.fonctionnement {
- & ul {
-  display: flex;
-  gap: 25px;
- 
-}
- & h2 {
-  margin: 40px 0 30px -14px;
-}
- &__btn {
-  box-shadow: 0.05rem 0.05rem 2px $grey;
-  padding: 20px 20px 20px 30px;
-  font-size: 17px;
-  font-weight: bold;
-  border-radius: 15px;
-  background: $light-grey;
-  width: 100%;
-  position: relative;
-  font-family: "roboto";
-  cursor: pointer;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  &__icon {
-    padding-right: 20px;
-  }
-  &__chiffre i {
-    box-shadow: 0px 0px 2px $grey;
-    padding: 0.5em 0.7em;
-    width: 8px;
-    border-radius: 60%;
-    background: $purple;
-    position: absolute;
-    left: -14px;
-    bottom: 15px;
-    font-size: 15px;
-    color: $white;
-  }
-  &__chiffre .fa-3,
-  .fa-2,
-  .fa-1 {
-    display: flex;
-    justify-content: center;
-  }
-}
-}
-/*************restaurants**************/
-h3 {
-  margin-left: 5.5%;
-  padding: 30px 0 15px 0;
-  font-size: 25px;
-}
-ul .separation {
-  display: flex;
-}
-.restaurants {
-  background: $light-grey;
-  padding-bottom: 50px;
-  margin-top: 60px;
-&__photo li {
-  width: 47%;
-  border-radius: 15px;
-}
-&__photo .separation {
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-  gap: 40px;
-}
-&__image {
-  display: flex;
-  justify-items: end;
-  justify-content: end;
-}
-&__image img {
-  width: 100%;
-  height: 250px;
-  border-radius: 15px 15px 0 0;
-  object-fit: cover;
-  object-position: center;
-  position: relative;
-}
-&__nouvelle__carte {
-  background: $green;
-  color: $dark-green;
-  position: absolute;
-  padding: 12px;
-  margin: 12px;
-  font-weight: bold;
-}
-}
-.cover__content {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 10px 0 10px;
-  height: 70px;
-  color: $black;
-  background: $white;
-  border-radius: 0 0 15px 15px;
-  position: relative;
-  &__coeur {
-    font-size: 30px;
-    position: absolute;
-    right: 5%;
-  }
-  &__coeur0 {
-    font-size: 30px;
-    position: absolute;
-    right: 5%;
-    
-    background: linear-gradient(360deg, $purple, $pink);
-    background-clip: text;
-    -webkit-background-clip: text;
-    color: transparent;
-    opacity: 0;
-  }
-  &__coeur0:hover{
-    opacity: 1;
-    transition: 200ms;
-  }
-  &__stitre {
-    font-weight: bold;
-    font-size: 20px;
-  }
-  &__arrondissement {
-    font-size: 18px;
-  }
-}
-/*****footer*****/
-.footer { 
-  font-family: "roboto";
-  margin-left: 5.5%;
-& div{
-  margin-top:5px ;
-}
 
-& a {
-  color: $white;
-}
-&-log img {
-  filter: brightness(0) invert(1);
-  margin-bottom: 20px;
-}
-}
-/***les pages menu****/
-.fa-arrow-left {
-  font-size: 20px;
-  position: absolute;
-  left: 2%;
-}
-.page__grise {
-  background: $light-grey;
-  padding-bottom: 5px;
-
-&__cover__titre{
-  transform: translateY(-40px);
-  border-radius: 25px 25px 0 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 10px 0 10px;
-  height: 70px;
-  color: $black;
-  background: $light-grey;
-}
-&__cover__coeur {
-  display: flex;
-  width: 95%;
-}
-&__titre {
-  font-weight: bold;
-  font-size: 30px;
-  font-family: "Shrikhand";
-  width: 100%;
-  margin-left: 5%;
-  position: relative;
-}
-&__coeur1 {
-  font-size: 30px;
-  position: absolute;
-  right: 6%;
-  opacity: 1;
-  color:$black
-}
-&__coeur2 {
-  position: absolute;
-  font-size: 30px;
-  right: 6%;
-  background: linear-gradient(360deg, $purple, $pink);
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
-  opacity: 0;
-}
-&__coeur2:hover{
-  opacity: 1;
-  transition: 200ms;
-}
-}
-.page__menu {
-  max-width: 90%;
-  margin-left: auto;
-  margin-right: auto;
-& ul {
-  display: flex;
-  gap: 25px;
-}  
-&__menu {
-  font-weight: 300;
-  font-size: 20px;
-  padding: 10px 0 10px 0;
-  border-bottom: 3px solid $green;
-  width: 50px;
-  margin: 40px 0 25px 0;
-}
-&__carte {
-  box-shadow: 0px 0px 2px $grey;
-  padding: 10px 20px 10px 30px;
-  font-size: 17px;
-  font-weight: bold;
-  border-radius: 15px;
-  background: $white;
-  width: 100%;
-  font-family: "roboto";
-  cursor: pointer;
-  position: relative;
-  overflow: hidden;
-  @for $i from 1 through 4 {
-    &:nth-child(#{$i}){
-      animation-delay: 500ms*$i;
-    }
-  }
-  animation: plat 2s;
-  animation-fill-mode: both;
-}
-&__titre {
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-  
-}
-@keyframes plat {
-  0%{
-    transform: scale(0);
-  }
-  100%{
-    transform: scale(1);
-  }
-}
-&__stitre {
-  display: flex;
-  justify-content: space-between;
-  font-weight: 400;
-  font-size: 16px;
-  padding-top: 10px;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-}
-& p{
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-}
-&__mony {
-  font-weight: bold;
-  transition: 500ms; 
-}
-&__carte:hover .cercle{ 
-  margin-right: 4rem;
-  
-}
-&__carte:hover &__confirmation{
-  margin-left: 5rem; 
-  transition: 500ms; 
-}
-&__carte:hover .fa-check{
-  transform: rotate(0deg);
-  transition: 500ms;
-}
-
-&__confirmation .cercle {
-  position: absolute;
- background-color: $green;
- display: flex;
- right: 0;
- top: 0;
-height: 100%;
- width: 4rem;
- transform: translateX(100%);
- transition: 500ms;
-}
-&__mony &__confirmation{
-  transition: 500ms;
-}
-}
-.fa-check {
- display: flex;
- align-items: center;
- justify-content: center;
- font-size: 20px;
- color: $green;
- transform: rotate(75deg);
- transition:  200ms;
-}
-.cercle .fa-check{
-  display: flex;
- align-items: center;
- justify-content: center;
-  border-radius: 50%;
-  width: 70%;
-  height: 35%;
-  margin: 20px;
- background-color: $white;
- 
-}
-.bouton {
-  margin: 40px 0 50px 0;
-  display: flex;
-  justify-content: center;
-&__commander {
-  padding: 12px 20px;
-  border-radius: 50px;
-  background: linear-gradient(to bottom,$pink ,$purple);
-  color: $white;
-  font-size: 18px;
-  font-weight: 500;
-  cursor: pointer;
-  border: none;
-  margin-top: 30px;
-  &:hover{
-    opacity: 0.9;
-    box-shadow: 0.25rem 0.25rem 10px $black;
-    transition-duration: .25s;
-  }
-}
-}
-/*--responsive version tablette--*/
-@media (max-width: 992px) {
-  .localisation__restaurant{ 
-  &__title {
-    width: 70%;
-    display: flex;
-    justify-content: center;
-  }
-  &__subtitel {
-    width: 85%;
-    display: flex;
-    justify-content: center;
-  }
-}
-  .fonctionnement{ 
-  & ul {
-    display: flex;
-    flex-direction: column;
-  }
-  &__btn {
-    width: auto;
-  }
-}
-  .restaurants__photo li {
-    width: 100%;
-  }
-  .page__menu{ 
-  & ul {
-    display: flex;
-    flex-direction: column;
-  }
-  & ul li{
-    width: auto;
-  }
-  }
-}
-/*--responsive version mobile--*/
-@media (max-width: 767px) {
- 
-  .fonctionnement{ 
-    
-    & ul {
-      display: flex;
-      flex-direction: column; 
-    }
-    &__btn {
-      width: auto;
-    }
-  }
-  .restaurant__photo li {
-    width: 100%;
-  }
-  .page__grise__titre {
-    font-size: 25px;
-  }
-  .page__menu ul {
-    display: flex;
-    flex-direction: column;
-  }
-  .page__grise__coeur1 {
-    font-size: 28px;
-  }
-}
 
   
