--- a/css/style.css
+++ b/css/style.css
@@ -152,6 +152,7 @@ footer {
   font-size: 30px;
   position: absolute;
   right: 6%;
+  top: 25%;
   opacity: 1;
   color: rgb(0, 0, 0);
 }
@@ -159,6 +160,7 @@ footer {
   position: absolute;
   font-size: 30px;
   right: 6%;
+  top: 25%;
   background: linear-gradient(360deg, #9356dc, #ff79da);
   background-clip: text;
   -webkit-background-clip: text;
@@ -186,6 +188,11 @@ footer {
   border-bottom: 3px solid #99E2D0;
   width: 50px;
   margin: 40px 0 25px 0;
+}
+.page__menu__carte h3 {
+  margin: 0;
+  padding: 0;
+  font-size: 17px;
 }
 .page__menu__carte {
   box-shadow: 0px 0px 2px #888;
