--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -34,6 +34,7 @@
     font-size: 30px;
     position: absolute;
     right: 6%;
+    top: 25%;
     opacity: 1;
     color:$black
   }
@@ -41,6 +42,7 @@
     position: absolute;
     font-size: 30px;
     right: 6%;
+    top: 25%;
     background: linear-gradient(360deg, $purple, $pink);
     background-clip: text;
     -webkit-background-clip: text;
@@ -67,6 +69,11 @@
     border-bottom: 3px solid $green;
     width: 50px;
     margin: 40px 0 25px 0;
+  }
+  &__carte h3{
+    margin: 0;
+    padding: 0;
+    font-size: 17px;
   }
   &__carte {
     box-shadow: 0px 0px 2px $grey;
