--- a/css/style.css
+++ b/css/style.css
@@ -388,8 +388,15 @@ footer {
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+.fonctionnement__btn:hover {
+  background: rgb(239, 236, 240);
+}
 .fonctionnement__btn__icon {
   padding-right: 20px;
+  padding-left: 10px;
+}
+.fonctionnement__btn__icon:hover {
+  color: #9356dc;
 }
 .fonctionnement__btn__chiffre i {
   box-shadow: 0px 0px 2px #888;
