--- a/sass/pages/_main.scss
+++ b/sass/pages/_main.scss
@@ -44,6 +44,7 @@
   }}
   /****Fonctionnemnt***/
   .fonctionnement {
+    
    & ul {
     display: flex;
     gap: 25px;
@@ -64,8 +65,15 @@
     cursor: pointer;
     text-overflow: ellipsis;
     white-space: nowrap;
+     &:hover  {
+      background: $light-purple; 
+    }
     &__icon {
       padding-right: 20px;
+      padding-left: 10px;
+    &:hover{
+      color: $purple;
+    }
     }
     &__chiffre i {
       box-shadow: 0px 0px 2px $grey;
