--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -7,3 +7,4 @@ $grey:#888;
 $black:rgb(0, 0, 0);
 $light-grey:rgb(250, 245, 245);
 $medium-grey:rgb(234, 228, 228);
+$light-purple:rgb(239, 236, 240)
